Fixed admin card container overflow bug

--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -199,4 +199,5 @@ button:hover {
 
 .room-page-contents {
     grid-area: card;
+    overflow: auto;
 }
